--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "axios": "^1.7.7",
     "firebase": "^10.14.1",
     "formik": "^2.4.6",
+    "jsonify": "^0.0.1",
+    "papaparse": "^5.4.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
