key de değişiklikler

--- a/.env
+++ b/.env
@@ -1,2 +1,9 @@
 VITE_API_KEY=AIzaSyAjDHaqsrcKP0J_YNci5jmAUnGUoAXdkfs
 
+
+  VITE_API_KEY=AIzaSyAzCNQuiZVunJ1Yxi_A7N3LsXmVrHaWvNc
+VITE_AUTH_DOMAIN=what-in-kitchen-d10c8.firebaseapp.com
+VITE_PROJECT_ID=what-in-kitchen-d10c8
+VITE_STORAGE_BUCKET=what-in-kitchen-d10c8.firebasestorage.app
+VITE_MESSAGING_SENDER_ID=198555867458
+VITE_APP_ID=1:198555867458:web:cb68f25caae3cf345610db
